<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensorLabel" />
    
    <Spinner
        android:id="@+id/sensorSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vendorLabel" />
    
    <TextView
        android:id="@+id/vendorField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
   
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/versionLabel" />
    
    <TextView
        android:id="@+id/versionField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rangeLabel" />
   
    <TextView
        android:id="@+id/rangeField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resolutionLabel" />
    
    <TextView
        android:id="@+id/resolutionField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/powerLabel" />
    
    <TextView
        android:id="@+id/powerField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensorReadingLabel" />
    
    <Button
        android:id="@+id/sensorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensorButtonLabel" />
    
</LinearLayout>